# rstudio-demos

./: .gitignore  .pre-commit-config.yaml  README.md  init.sh  justfile  migrate.R  prek.toml
applications/python-streamlit-databricks-spark/: README.md  app.py  justfile  pyproject.toml  requirements.txt
applications/python-streamlit-databricks-spark/.posit/publish/: Streamlit Databricks with Spar-PH2G.toml
applications/python-streamlit-databricks-spark/.posit/publish/deployments/: deployment-KTNN.toml
applications/streamlit-penguins/: README.md  app.py  manifest.json  pyproject.toml  requirements.txt  uv.toml
applications/streamlit-penguins/.posit/publish/: streamlit-penguins - scenario-J72V.toml
applications/streamlit-penguins/.posit/publish/deployments/: deployment-5ISM.toml
applications/streamlit-penguins/app/: app.py  manifest.json  requirements.txt
applications/streamlit-penguins/app/.posit/publish/: Meet the Penguins (Streamlit)-RHOH.toml  Push button streamlit app-O32J.toml  Streamlit Demo 2024-10-24-UF6I.toml  Streamlit deployment-0CSJ.toml  Streamlit from VS Code-T1RD.toml  Streamlit push button-E8HS.toml
applications/streamlit-penguins/app/.posit/publish/deployments/: deployment-1.toml  deployment-1EU4.toml  deployment-2.toml  deployment-B2CF.toml  deployment-EU1B.toml  deployment-I4QF.toml
applications/streamlit-penguins/rsconnect-python/: streamlit-penguins.json
data-sources/: create-sqlite-db.py  data-sources.Rproj  pyproject.toml  read-snowflake.R  sample.db  (+3 more)
databricks/databricks-jupyter-notebook-pyspark/: databricks.yml  notebook.ipynb  notebook.qmd  pyproject.toml
databricks/databricks-streamlit-pyspark/: app.py  justfile  mise.toml  pyproject.toml  requirements.txt
databricks/databricks-streamlit-pyspark/.posit/publish/: 2025-03-10-Databricks-test-T7IC.toml  Databricks Streamlit - SQL War-9B1Q.toml
databricks/databricks-streamlit-pyspark/.posit/publish/deployments/: deployment-KIH0.toml
databricks/databricks-streamlit-sql-warehouse/: app.py  pyproject.toml  requirements.txt
databricks/databricks-streamlit-sql-warehouse/.posit/publish/: Databricks Streamlit - SQL War-G3JV.toml
databricks/databricks-streamlit-sql-warehouse/.posit/publish/deployments/: deployment-L5V4.toml
snowflake/dash-app/: README.md  app.py  pyproject.toml  reprex-bad-app.py  reprex-good-app.py  requirements.txt
snowflake/dash-app/.posit/publish/: Snowflake with Dash Example-4JLL.toml
snowflake/dash-app/.posit/publish/deployments/: deployment-AD6E.toml
(+239 files in other folders)
