[project]
name = "databricks-jupyter-notebook"
version = "0.1.0"
requires-python = "==3.10.17"
dependencies = [
    "databricks-connect>=14,<15",
    "databricks-sdk>=0.52.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
    "polars>=1.29.0",
    "posit-sdk>=0.9.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]
