[project]
name = "databricks-streamlit-sql-warehouse"
version = "0.1.0"
requires-python = "==3.12.6"
dependencies = [
    "databricks-sdk>=0.52.0",
    "databricks-sql-connector>=4.0.3",
    "loguru>=0.7.3",
    "polars>=1.29.0",
    "posit-sdk>=0.9.0",
    "pyarrow>=20.0.0",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
