[project]
name = "dash-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "dash>=3.2.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "posit-sdk>=0.12.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "snowflake-connector-python>=3.17.4",
]
